# BIT-Matrix-Calculator

./: CMakeLists.txt  LICENSE  MatrixBase.hpp  MatrixIters.hpp  MatrixNode.hpp  README.md  matrix.cpp  matrix.hpp
script/: build-target.ps1  debug-target.ps1
src/: Matrix.hpp  main.cpp
src/components/: ButtonList.hpp  ButtonTiny.hpp  Dialog.hpp  List.hpp  MatrixEditor.hpp  Text.hpp  ViewBase.hpp
src/model/: Expression.hpp  Matrix.hpp  MatrixBase.hpp  MatrixList.hpp
src/view/: AlertView.hpp  MainView.hpp  MatrixEditView.hpp
test/: test.cpp
